# QBittorrentBot

./: .all-contributorsrc  .dockerignore  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  QB.py.old  QbittorrentBot.service  README.md  bot.py  check_finished_torrents.py  config.json.template  config.py  custom_filters.py  db_management.py  docker-compose.yml.example  index.html  json_validation.py  login.json  main.py  pyproject.toml  qb.py  qbittorrent_control.py  requirements.txt  robots.txt  setup.cfg  utils.py
.github/workflows/: deploy_retype.yml  docker-image.yml
advanced/: index.html
advanced/add_entries_configuration/: index.html
advanced/add_new_client_manager/: index.html
advanced/manager_user_roles/: index.html
advanced/telegram_proxy/: index.html
contributing/: index.html
docker/: docker-compose.from_source.yml  docker-compose.yml
docker/bot_redis/: config.yml  docker-compose.yml
docker/bot_redis_qbittorrent/: config.yml  docker-compose.yml
docker/from_source/: config.yml  docker-compose.yml
docs/: contributing.md  faq.md  index.md  retype.yml
docs/advanced/: add_entries_configuration.md  add_new_client_manager.md  index.md  index.yml  manager_user_roles.md  telegram_proxy.md
docs/getting_started/: configuration_file.md  index.md  installation.md  migrating_to_v2.md  (+1 more)
faq/: index.html
getting_started/: index.html
screenshots/: index.html
src/: bot.py  config.py  db_management.py  logger.py  main.py  qbittorrent_bot.py  qbittorrent_control.py  qbittorrent_manager.py  tasks.py  utils.py
(+124 files in other folders)
